--- a/src/Major-project.html
+++ b/src/Major-project.html
@@ -498,7 +498,7 @@
     <div id="projects" class="showcase">
         <div class="container">
             <div class="section-title">SERVICES</div>
-            <h2 class="section-h2">Projects That We're Proud Of</h2>
+            <h2 class="section-h2 text-center">Projects That We're Proud Of</h2>
             <div class="gallery-section">
                 <div class="gallery-header">
                     <label for="" class="first_child">SHOW ALL</label>
@@ -667,32 +667,44 @@
         <div class="container">
             <div class="about-divider">
                 <!-- image right side -->
-                <div class="image-box w-full overflow-hidden mt-6 sm:mt-0">
+                <div class="image-box">
                     <img class="" src="Major Project/header-background.jpg" alt="stats">
                 </div>
                 <!-- text content left side -->
-                <div class="content-box">
-                    <div class="item-1 w-full sm:p-4 px-4 mb-6">
-                        <h1 class="mb-2 ">Moon hashtag pop-up try-hard offal truffaut</h1>
-                        <div class="leading-relaxed">Pour-over craft beer pug drinking vinegar live-edge gastropub,
-                            keytar neutra sustainable fingerstache kickstarter.</div>
+                <div class="content-box px-8">
+                    <div class="item-1 block w-full">
+                        <div class="section-title">ABOUT</div>
+                        <h2 class="section-h2">We're Passionate About Delivering Growth Services</h2>
+                        <p class="mb-4">Our goal is to provide the right business growth services at the appropriate
+                            time so companies can benefit from the created momentum and thrive for a long period of time
+                        </p>
+                        <ul>
+                            <li class="single-template-ul-li">
+                                <i class="material-symbols-outlined">
+                                    square
+                                </i>
+                                <span>Everything we recommend has direct positive impact</span>
+                            </li>
+                            <li class="single-template-ul-li">
+                                <i class="material-symbols-outlined">
+                                    square
+                                </i>
+                                <span>You will become an important partner of our company</span>
+                            </li>
+                        </ul>
                     </div>
                     <div class="item-2-parent">
-                        <div class="item-2 p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-                            <h2 class="about-h2">2.7K</h2>
-                            <span class="leading-relaxed">Users</span>
+                        <div class="item-2 mt-4 mr-8">
+                            <h2 class="about-h2">231</h2>
+                            <span class="leading-relaxed">Happy<br>Users</span>
                         </div>
-                        <div class="item-2 p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-                            <h2 class="about-h2">1.8K</h2>
-                            <span class="leading-relaxed">Subscribes</span>
+                        <div class="item-2 mt-4 mr-8">
+                            <h2 class="about-h2">121</h2>
+                            <span class="leading-relaxed">Issues<br>Solved</span>
                         </div>
-                        <div class="item-2 p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-                            <h2 class="about-h2">35</h2>
-                            <span class="leading-relaxed">Downloads</span>
-                        </div>
-                        <div class="item-2 p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-                            <h2 class="about-h2">4</h2>
-                            <span class="leading-relaxed">Products</span>
+                        <div class="item-2 mt-4 mr-8">
+                            <h2 class="about-h2">159</h2>
+                            <span class="leading-relaxed">Good<br>Reviews</span>
                         </div>
                     </div>
                 </div>
