--- a/src/Major-project.html
+++ b/src/Major-project.html
@@ -53,7 +53,7 @@
                         <li><a href="#about" class="about-flex">ABOUT<i class="material-symbols-outlined">
                                     arrow_drop_down
                                 </i></a></li>
-                        <li id="contact"><a href="#contact">CONTACT</a></li>
+                        <li><a href="#contact">CONTACT</a></li>
                         <!-- Facebook Icon -->
                         <div class="nav-2">
                             <span class="fa-stack fa-stack-sm">
@@ -671,7 +671,7 @@
                     <img class="" src="Major Project/header-background.jpg" alt="stats">
                 </div>
                 <!-- text content left side -->
-                <div class="content-box px-8">
+                <div class="content-box pl-4">
                     <div class="item-1 block w-full">
                         <div class="section-title">ABOUT</div>
                         <h2 class="section-h2">We're Passionate About Delivering Growth Services</h2>
@@ -711,6 +711,122 @@
             </div>
         </div>
     </section>
+
+    <!-- CONTACT Section -->
+    <section id="contact" class="testimonials contact-section">
+        <div class="container text-gray-600 body-font py-24">
+            <div class="sub-container">
+                <div class="contact-details inline-block">
+                    <div class="section-title">CONTACT</div>
+                    <h2 class="section-h2">Get In Touch Using The Form</h2>
+                    <p class="mb-4">You can stop by our office for a cup of coffee and just use the contact form below
+                        for any questions and inquiries</p>
+                    <div class="add">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>22nd Innovative Street, San Francisco, CA 94043, US</span>
+                    </div>
+                    <div class="info">
+                        <i class="fa-solid fa-phone"></i>
+                        <span>+81 720 22 126</span>
+                        <i class="fa-solid fa-phone"></i>
+                        <span>+81 720 22 128</span>
+                        <i class="fa-solid fa-envelope"></i>
+                        <span>office@domain.com</span>
+                    </div>
+
+                    <h3 class="section-h3 mb-4">Follow Aria On Social Media</h3>
+                    <div class="stack-md">
+                        <span class="fa-stack">
+                            <span class="hexagon"></span>
+                            <i class="fab fa-facebook-f fa-stack-1x"></i>
+                        </span>
+                        <span class="fa-stack">
+                            <span class="hexagon"></span>
+                            <i class="fab fa-twitter fa-stack-1x"></i>
+                        </span>
+                        <span class="fa-stack"><span class="hexagon"></span><i class="fab fa-pinterest fa-stack-1x"></i>
+                        </span>
+                        <span class="fa-stack"><span class="hexagon"></span><i class="fab fa-instagram fa-stack-1x"></i>
+                        </span>
+                        <span class="fa-stack"><span class="hexagon"></span><i
+                                class="fab fa-linkedin-in fa-stack-1x"></i>
+                        </span>
+                        <span class="fa-stack"><span class="hexagon"></span><i class="fab fa-behance fa-stack-1x"></i>
+                        </span>
+                    </div>
+                </div>
+                
+                <!-- callme-input Section
+                <div class="contact-input inline-block">
+                    <form action="" method="get">
+                        <div class="form-group">
+                            <input type="text" name="name" id="user-name" placeholder="Name">
+                            <input type="number" name="num" maxlength="10" size="10" placeholder="Phone">
+                            <input type="email" name="email" id="email-id" placeholder="Email">
+                            <select class="form-select" name="" id="form-select">
+                                <option value disabled selected class="select-option">Interested in...</option>
+                                <option value="" class="select-option">Off The Ground</option>
+                                <option value="" class="select-option">Accelerated Growth</option>
+                                <option value="" class="select-option">Market Domination</option>
+                            </select>
+                        </div>
+
+                        <div class="checkbox-group">
+                            <input type="checkbox" name="" id="">
+                            <span>
+                                I agree with Aria's stated <a href="">Privacy Policy</a>
+                                and <a href="">Terms & Conditions</a></span>
+                        </div>
+                        <div class="form-submit-btn">
+                            <button type="submit">CALL ME</button>
+                        </div>
+                    </form>
+                </div> -->
+            </div>
+        </div>
+    </section>
+
+    <!-- FOOTER Section -->
+    <footer class="footer-section">
+        <div class="container">
+            <div class="text-container-group">
+                <div class="text-box max-w-md">
+                    <div>
+                        <h4>Few Words About Aria</h4>
+                    </div>
+                    <p>We're passionate about delivering the best business growth services for companies just starting
+                        out as startups or industry players that have established their market position a long time ago.
+                    </p>
+                </div>
+                <div class="text-box">
+                    <div>
+                        <h4>Links</h4>
+                    </div>
+                    <a href="#">Terms & Conditions</a>
+                    <a href="#">Privacy Policy</a>
+                </div>
+                <div class="text-box">
+                    <div>
+                        <h4>Tools</h4>
+                    </div>
+                    <a href="">businessgrowth.com</a>
+                    <a href="">influencers.com</a>
+                    <a href="">optimizer.net</a>
+                </div>
+                <div class="text-box">
+                    <div>
+                        <h4>Partners</h4>
+                    </div>
+                    <a href="">unicorns.com</a>
+                    <a href="">staffmanager.com</a>
+                    <a href="">association.gov</a>
+                </div>
+            </div>
+        </div>
+        <div class="container copyright pt-4 pb-0.5">
+            <p>Copyright © 2045 All rights reserved - By Inovatik</p>
+        </div>
+    </footer>
 
 
     <!-- Font Awesome -->
