major-project-complete

--- a/src/Major-project.html
+++ b/src/Major-project.html
@@ -481,8 +481,8 @@
                         <input type="text" name="name" id="user-name" placeholder="Name">
                         <input type="number" name="num" maxlength="10" size="10" placeholder="Phone">
                         <input type="email" name="email" id="email-id" placeholder="Email">
-                        <select class="form-select" name="" id="form-select">
-                            <option value disabled selected class="select-option">Interested in...</option>
+                        <select class="form-select text-white" name="" id="form-select">
+                            <option value disabled hidden selected class="select-option">Interested in...</option>
                             <option value="" class="select-option">Off The Ground</option>
                             <option value="" class="select-option">Accelerated Growth</option>
                             <option value="" class="select-option">Market Domination</option>
@@ -492,7 +492,7 @@
                     <div class="checkbox-group">
                         <!-- &nbsp; -->
                         <input type="checkbox" name="" id="">
-                        <span>
+                        <span style="color: #dfe5ec !important;">
                             I agree with Aria's stated <a href="">Privacy Policy</a>
                             and <a href="">Terms & Conditions</a></span>
                     </div>
