--- a/src/Major-project.html
+++ b/src/Major-project.html
@@ -723,22 +723,23 @@
     <section id="contact" class="testimonials contact-section">
         <div class="container text-gray-600 body-font py-24">
             <div class="sub-container">
-                <div class="contact-details inline-block">
+                <div class="contact-details inline-block pr-8">
                     <div class="section-title">CONTACT</div>
                     <h2 class="section-h2">Get In Touch Using The Form</h2>
                     <p class="mb-4">You can stop by our office for a cup of coffee and just use the contact form below
-                        for any questions and inquiries</p>
+                        for any questions and enquiries</p>
                     <div class="add">
-                        <i class="fa-solid fa-location-dot"></i>
-                        <span>22nd Innovative Street, San Francisco, CA 94043, US</span>
+                        <span><i class="fa-solid fa-location-dot"></i>
+                            22nd Innovative Street, San Francisco, CA 94043, US</span>
                     </div>
-                    <div class="info">
-                        <i class="fa-solid fa-phone"></i>
-                        <span>+81 720 22 126</span>
-                        <i class="fa-solid fa-phone"></i>
-                        <span>+81 720 22 128</span>
-                        <i class="fa-solid fa-envelope"></i>
-                        <span>office@domain.com</span>
+                    <div class="info flex flex-row flex-wrap justify-between">
+                        <span class="underline inline-block">
+                            <i class="fa-solid fa-phone"></i>
+                            +81 720 22 126</span>
+                        <span class="underline inline-block"><i class="fa-solid fa-phone"></i>
+                            +81 720 22 128</span>
+                        <span class="underline inline-block"><i class="fa-solid fa-envelope"></i>
+                            office@domain.com</span>
                     </div>
 
                     <h3 class="section-h3 mb-4">Follow Aria On Social Media</h3>
@@ -764,33 +765,33 @@
                 </div>
 
                 <!-- callme-input Section -->
-                <section class="contact-input self-baseline">
-                    <div class="w-full">
-                        <div class="container mx-auto flex flex-col">
-                            <div class="flex flex-col w-full">
-                                <div class="relative mb-4">
-                                    <input type="text" id="name" name="name" placeholder="Name"
-                                        class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
-                                </div>
-                                <div class="relative mb-4">
-                                    <input type="email" id="email" name="email" placeholder="Email"
-                                        class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
-                                </div>
-                                <div class="relative mb-4">
-                                    <textarea id="message" name="message" placeholder="Your Message"
-                                        class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
-                                </div>
-                                <div class="checkbox-group">
-                                    <!-- &nbsp; -->
-                                    <input type="checkbox" name="" id="">
-                                    <span>
-                                        I agree with Aria's stated <a href="" class="underline">Privacy Policy</a>
-                                        and <a href="" class="underline">Terms & Conditions</a></span>
-                                </div>
-                                <button type="button" class="contant-sec-btn">SUBMIT MESSAGE</button>
+                <section class="contact-input self-baseline w-full">
+                    <!-- <div class="w-full"> -->
+                    <div class="mx-auto flex flex-col w-full">
+                        <div class="flex flex-col">
+                            <div class="relative mb-4">
+                                <input type="text" id="name" name="name" placeholder="Name"
+                                    class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
                             </div>
+                            <div class="relative mb-4">
+                                <input type="email" id="email" name="email" placeholder="Email"
+                                    class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                            </div>
+                            <div class="relative mb-4">
+                                <textarea id="message" name="message" placeholder="Your Message"
+                                    class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
+                            </div>
+                            <div class="checkbox-group">
+                                <!-- &nbsp; -->
+                                <input type="checkbox" name="" id="">
+                                <span>
+                                    I agree with Aria's stated <a href="" class="underline">Privacy Policy</a>
+                                    and <a href="" class="underline">Terms & Conditions</a></span>
+                            </div>
+                            <button type="button" class="contant-sec-btn">SUBMIT MESSAGE</button>
                         </div>
                     </div>
+                    <!-- </div> -->
                 </section>
             </div>
         </div>
