major-project-complete

--- a/src/Major-project.html
+++ b/src/Major-project.html
@@ -732,14 +732,11 @@
                         <span><i class="fa-solid fa-location-dot"></i>
                             22nd Innovative Street, San Francisco, CA 94043, US</span>
                     </div>
-                    <div class="info flex flex-row flex-wrap justify-between">
-                        <span class="underline inline-block">
-                            <i class="fa-solid fa-phone"></i>
-                            +81 720 22 126</span>
-                        <span class="underline inline-block"><i class="fa-solid fa-phone"></i>
-                            +81 720 22 128</span>
-                        <span class="underline inline-block"><i class="fa-solid fa-envelope"></i>
-                            office@domain.com</span>
+                    <div class="info">
+                        <span class="underline">
+                            <i class="fa-solid fa-phone"></i>+81 720 22 126</span>
+                        <span class="underline"><i class="fa-solid fa-phone"></i>+81 720 22 128</span>
+                        <span class="underline"><i class="fa-solid fa-envelope"></i>office@domain.com</span>
                     </div>
 
                     <h3 class="section-h3 mb-4">Follow Aria On Social Media</h3>
