--- a/src/Major-project.html
+++ b/src/Major-project.html
@@ -702,15 +702,15 @@
                     </div>
                     <div class="item-2-parent">
                         <div class="item-2 mt-4 mr-8">
-                            <h2 class="about-h2" id="value-231">231</h2>
+                            <h2 class="about-h2" id="value-231"></h2>
                             <span class="leading-relaxed">Happy<br>Users</span>
                         </div>
                         <div class="item-2 mt-4 mr-8">
-                            <h2 class="about-h2" id="value-121">121</h2>
+                            <h2 class="about-h2" id="value-121"></h2>
                             <span class="leading-relaxed">Issues<br>Solved</span>
                         </div>
                         <div class="item-2 mt-4 mr-8">
-                            <h2 class="about-h2" id="value-159">159</h2>
+                            <h2 class="about-h2" id="value-159"></h2>
                             <span class="leading-relaxed">Good<br>Reviews</span>
                         </div>
                     </div>
