--- a/src/Major-project.html
+++ b/src/Major-project.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<style>
-    html {
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Major Project</title>
+    <link rel="stylesheet" href="../dist/output.css">
+    <link rel="stylesheet" href="css/Major-project.css">
+    <link rel="stylesheet" href="input.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
+    <!-- Animate CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- Other meta tags and title -->
+    <meta http-equiv="Cache-Control" content="max-age=3600, must-revalidate">
+    <style>
+         html {
         scroll-behavior: smooth;
         overflow-y: auto;
         overflow-x: hidden;
@@ -22,21 +36,6 @@
         margin-left: auto !important;
         margin-right: auto !important;
     }
-</style>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Major Project</title>
-    <link rel="stylesheet" href="../dist/output.css">
-    <link rel="stylesheet" href="css/Major-project.css">
-    <link rel="stylesheet" href="input.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
-    <!-- Animate CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <style>
         body {
             overflow-x: hidden;
             scroll-behavior: smooth;
